# agent-market

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  TECHNICAL_DOCS.md  demo_market.db  docker-compose.yml  main.py  market.db  pyproject.toml
.agent/tasks/: task_10_comprehensive_documentation.md  task_11_requirements_check.md  task_12_improvement_plan.md  task_13_multi_asset_transition.md  task_13_submission_readiness.md  task_14_fastapi_server.md  task_14_frontend_dashboard.md  task_15_run_all_script.md  task_16_gemini_model_fix.md  task_17_ollama_provider.md  task_18_fallback_retry.md  task_19_env_loading_for_server.md  task_1_scaffolding.md  task_20_terminal_panel.md  task_21_fix_frontend_dependencies.md  task_22_premium_frontend_overhaul.md  task_23_code_review_fixes.md  task_24_scaling_and_intelligence.md  task_25_security_audit.md  task_26_production_deployment.md  task_27_enhanced_observability.md  task_28_pre_commit_review.md  (+13 more)
chroma_db/: chroma.sqlite3
context/: context_0.md  global-guidelines.md  groq-models.md  multi-agent-marketplace-simulation.md  multi_asset_market_design.md  project-structure.md  project_plan_v1.md  samuelschmidgall-agentlaboratory.txt  task_code_review.md
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
scripts/: run_all.sh
tests/: __init__.py  demo_agent.py  demo_market.py  manual_test_ws.py  test_api_integration.py  test_engine.py  test_journalist.py  test_ledger.py  test_order_book.py  test_portfolio.py  test_trader.py
(+30 files in other folders)
