[project]
name = "agent-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "litellm>=1.80.12",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.31",
    "tenacity>=9.1.2",
]
